Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -419,10 +419,12 @@
         <div class="row">
             <ul class="what-we-do-cards">
                 <li class="what-we-do-card-item col-12 col-md-4">
-                    <i class="fab fa-dev"></i>
-                    <a href="#" class="card-link">
-                        App & Software <br>
+                    <a href="#" class="card-link d-flex flex-column">
+                        <i class="fab fa-dev"></i>
+                        <span class="card-link-text">
+                            App & Software <br>
                         Development
+                        </span>
                     </a>
                     <p class="what-card-text">
                         We use the latest technologies to build apps and custom software solutions.
@@ -433,10 +435,12 @@
                 </li>
 
                 <li class="what-we-do-card-item col-12 col-md-4">
-                    <i class="fab fa-chrome"></i>
-                    <a href="#" class="card-link">
-                        Web Design <br>
+                    <a href="#" class="card-link d-flex flex-column">
+                        <i class="fab fa-chrome"></i>
+                        <span class="card-link-text">
+                            Web Design <br>
                         & Hosting
+                        </span>
                     </a>
                     <p class="what-card-text">
                         We design, build, and host websites for hundreds of innovative companies.
@@ -447,10 +451,12 @@
                 </li>
 
                 <li class="what-we-do-card-item col-12 col-md-4">
-                    <i class="fas fa-camera"></i>
-                    <a href="#" class="card-link">
-                        Web Photos <br>
+                    <a href="#" class="card-link d-flex flex-column">
+                        <i class="fas fa-camera"></i>
+                        <span class="card-link-text">
+                            Web Photos <br>
                         & Videos
+                        </span>
                     </a>
                     <p class="what-card-text">
                         We capture brilliant photos and videos that boost the visual appearance of your website.
@@ -521,12 +527,14 @@
         <div style="margin-top: 110px" class="serv-card-row row d-flex justify-content-between">
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/crops_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Agriculture
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/crops_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Agriculture
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         Make sure clients and farmers understand who you are and what you do with an intuitive website that easily connects with your audience.
@@ -538,12 +546,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/dollars-symbol_white-min_4.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Banking & Finance
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/dollars-symbol_white-min_4.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Banking & Finance
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         With decades of experience and a deep understanding of security and compliance, Onsharp has your best interest in mind.
@@ -555,13 +565,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/traffic-cone_white-min.png" alt="traffic-cone_white" class="serve-image-front">
-                    </div>
-
                     <a href="#" class="card-link">
-                        Construction
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/traffic-cone_white-min.png" alt="traffic-cone_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Construction
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         Creating a website is a lot like construction. Let us help you build an online presence that truly represents the quality of your work.
@@ -576,12 +587,14 @@
         <div style="margin-top: 50px" class="serv-card-row not-main row d-flex justify-content-between">
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/compass-for-drawing_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Engineering
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/compass-for-drawing_white-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Engineering
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         Don't let your website undermine what you do as an engineering firm. Let us help you demonstrate your hard work and dedication to each project.
@@ -593,12 +606,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/Healthcare.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Healthcare
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/Healthcare.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Healthcare
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         We have more than 19 years of experience building healthcare websites, management systems, and billing integrations.
@@ -610,13 +625,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/tools-cross-settings-symbol-for-interface_white-min_4.png" alt="traffic-cone_white" class="serve-image-front">
-                    </div>
-
                     <a href="#" class="card-link">
-                        Manufacturing
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/tools-cross-settings-symbol-for-interface_white-min_4.png" alt="traffic-cone_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Manufacturing
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         Display your great work, process, and attention to detail on your website so people can understand what makes you unique.
@@ -631,12 +647,14 @@
         <div style="margin-top: 50px" class="serv-card-row not-main row d-flex justify-content-between">
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/RealEstate.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Real Estate
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/RealEstate.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Real Estate
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         We provide innovate web design and software integration services that help our real estate clients better serve their tenants.
@@ -648,12 +666,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/Transport-Logistics-min.png" alt="dollars-symbol_white" class="serve-image-front">
-                    </div>
                     <a href="#" class="card-link">
-                        Transportation & Logistics
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/Transport-Logistics-min.png" alt="dollars-symbol_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Transportation & Logistics
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         We help our clients leverage new and emerging transportation and logistics technologies that drive growth and efficiency.
@@ -665,13 +685,14 @@
             </div>
             <div class="col-md-4">
                 <div class="serve-card">
-                    <div class="serve-image">
-                        <i class="fas fa-circle serve-image-bg"></i>
-                        <img src="img/electric-tower_white-min.png" alt="traffic-cone_white" class="serve-image-front">
-                    </div>
-
                     <a href="#" class="card-link">
-                        Utilities
+                        <div class="serve-image">
+                            <i class="fas fa-circle serve-image-bg"></i>
+                            <img src="img/electric-tower_white-min.png" alt="traffic-cone_white" class="serve-image-front">
+                        </div>
+                        <span class="card-link-text">
+                            Utilities
+                        </span>
                     </a>
                     <p class="serve-card-text">
                         Stay connected to your customers with a website that represents who you are and what you do. Let us help you build a solution that works for you.
