Добавлен первый заказ

--- a/onsharp-copy/index.html
+++ b/onsharp-copy/index.html
@@ -745,21 +745,21 @@
         </div>
 
         <div class="company-cards-container">
-            <img src="img/Titan-min-e1556729424998.png" alt="company" class="company-image">
-            <img src="img/GateCityBank-min-e1556729504903.png" alt="company" class="company-image">
-            <img src="img/OtterTail-min-e1556729449309.png" alt="company" class="company-image">
-            <img src="img/Wishek-min-e1556729466278.png" alt="company" class="company-image">
-            <img src="img/Amity-min.png" alt="company" class="company-image">
-            <img src="img/AmericanCrystalSugarCompany-1-min-e1556729221874.png" alt="company" class="company-image">
-            <img src="img/Cardconnect-min-e1556729572152.png" alt="company" class="company-image">
-            <img src="img/DawsonInsurance-min-e1556729399259.png" alt="company" class="company-image">
-            <img src="img/Tower_Solutions_500px_by_300px_Client_Logo-min-e1556729375235.png" alt="company" class="company-image">
-            <img src="img/apex-min-e1556729521464.png" alt="company" class="company-image">
-            <img src="img/TCILogo-min-e1556729345457.png" alt="company" class="company-image">
-            <img src="img/NexusCapital-min-e1556729558512.png" alt="company" class="company-image">
-            <img src="img/oday-min-e1556729482909.png" alt="company" class="company-image">
-            <img src="img/Paradiso-min-e1556729270928.png" alt="company" class="company-image">
-            <img src="img/Nemont-min-e1556729541263-min.png" alt="company" class="company-image">
+            <a href="#"><img src="img/Titan-min-e1556729424998.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/GateCityBank-min-e1556729504903.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/OtterTail-min-e1556729449309.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Wishek-min-e1556729466278.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Amity-min.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/AmericanCrystalSugarCompany-1-min-e1556729221874.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Cardconnect-min-e1556729572152.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/DawsonInsurance-min-e1556729399259.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Tower_Solutions_500px_by_300px_Client_Logo-min-e1556729375235.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/apex-min-e1556729521464.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/TCILogo-min-e1556729345457.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/NexusCapital-min-e1556729558512.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/oday-min-e1556729482909.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Paradiso-min-e1556729270928.png" alt="company" class="company-image"></a>
+            <a href="#"><img src="img/Nemont-min-e1556729541263-min.png" alt="company" class="company-image"></a>
         </div>
 
 
