--- a/designer_portfolio/index.html
+++ b/designer_portfolio/index.html
@@ -130,7 +130,7 @@
     </div>
 </section>
 
-<section class="skills">
+<section class="skills" id="skills">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center justify-content-center">
@@ -210,7 +210,7 @@
     </div>
 </section>
 
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -252,7 +252,7 @@
     </div>
 </section>
 
-<footer class="footer">
+<footer class="footer" id="contacts">
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex flex-column align-items-center">
