Карусель на главном экране добавил в watch group

--- a/watch group/index.html
+++ b/watch group/index.html
@@ -305,100 +305,114 @@
                     </a>
                 </div>
             </div>
+
             <div class="row mt-5 mb-6">
                 <div class="col-12">
                     <div class="owl-carousel owl-theme main-page-carousel">
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
                                 <img src="img/download.jpg">
                                 <!-- Use if product is out of stock -->
                                 <span class="out-of-stock">
-
+                                    Нет в наличии
                                 </span>
                                 <!-- -->
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
-
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
-                                <img src="img/">
-                                <span class="out-of-stock">
-
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
                                 </span>
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
                                 <span class="product-brand"></span>
                                 <h3 class="product-name"></h3>
                                 <span class="product-price"></span>
                                 <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
+                            </span>
+                        </div>
 
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
-                                <img src="img/">
-                                <span class="out-of-stock">
-
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
+                                <img src="img/g-shock-10506611-10506611-11582970-247x296.jpg">
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
                                 </span>
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
                                 <span class="product-brand"></span>
                                 <h3 class="product-name"></h3>
                                 <span class="product-price"></span>
                                 <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
+                            </span>
+                        </div>
 
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
-                                <img src="img/">
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
+                                <img src="img/marc-by-marc-jacobs-mbm1184-marci-medium-ambm1184-8207608-247x296.jpg">
+                                <!-- Use if product is out of stock -->
                                 <span class="out-of-stock">
-
+                                    Нет в наличии
                                 </span>
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
+                                <!-- -->
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
+                                </span>
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
                                 <span class="product-brand"></span>
                                 <h3 class="product-name"></h3>
                                 <span class="product-price"></span>
                                 <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
+                            </span>
+                        </div>
 
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
-                                <img src="img/">
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
+                                <img src="img/download-3.jpg">
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
+                                </span>
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
+                                <span class="product-brand"></span>
+                                <h3 class="product-name"></h3>
+                                <span class="product-price"></span>
+                                <a href="#" class="product-more-information"></a>
+                            </span>
+                        </div>
+
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
+                                <img src="img/download-1.jpg">
+                                <!-- Use if product is out of stock -->
                                 <span class="out-of-stock">
-
+                                    Нет в наличии
                                 </span>
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
+                                <!-- -->
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
+                                </span>
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
                                 <span class="product-brand"></span>
                                 <h3 class="product-name"></h3>
                                 <span class="product-price"></span>
                                 <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
+                            </span>
+                        </div>
 
-                        <a href="#" class="main-page-products-carousel__item">
-                            <div class="main-page-products-carousel-image-container">
-                                <img src="img/">
-                                <span class="out-of-stock">
-
+                        <div href="#" class="main-page-products-carousel__item">
+                            <a href="#" class="main-page-products-carousel-image-container">
+                                <img src="img/swatch-yvb401-garosugil-ayvb401-7980291-247x296.jpg">
+                                <span class="fast-view-label">
+                                    Быстрый просмотр
                                 </span>
-                            </div>
-                            <div class="main-page-products-carousel__product-name">
+                            </a>
+                            <span class="main-page-products-carousel__product-name">
                                 <span class="product-brand"></span>
                                 <h3 class="product-name"></h3>
                                 <span class="product-price"></span>
                                 <a href="#" class="product-more-information"></a>
-                            </div>
-                        </a>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
