Карусель на главном экране добавил в watch group

--- a/watch group/index.html
+++ b/watch group/index.html
@@ -8,7 +8,7 @@
     <title>Главная - Watch Group</title>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/65f48fc481.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -317,30 +317,32 @@
                                     Нет в наличии
                                 </span>
                                 <!-- -->
-                                <span class="fast-view-label">
+                                <span data-card_image="img/download.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand"> Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <!-- Use if product is out of stock -->
+                                <a href="#" class="product-more-information">Подробнее</a>
+                                <!-- -->
                             </span>
                         </div>
 
                         <div href="#" class="main-page-products-carousel__item">
                             <a href="#" class="main-page-products-carousel-image-container">
                                 <img src="img/g-shock-10506611-10506611-11582970-247x296.jpg">
-                                <span class="fast-view-label">
+                                <span data-card_image="img/g-shock-10506611-10506611-11582970-247x296.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand">Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <a href="#" class="product-more-information">В корзину</a>
                             </span>
                         </div>
 
@@ -352,30 +354,30 @@
                                     Нет в наличии
                                 </span>
                                 <!-- -->
-                                <span class="fast-view-label">
+                                <span data-card_image="img/marc-by-marc-jacobs-mbm1184-marci-medium-ambm1184-8207608-247x296.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand">Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <a href="#" class="product-more-information">Подробнее</a>
                             </span>
                         </div>
 
                         <div href="#" class="main-page-products-carousel__item">
                             <a href="#" class="main-page-products-carousel-image-container">
                                 <img src="img/download-3.jpg">
-                                <span class="fast-view-label">
+                                <span data-card_image="img/download-3.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand">Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <a href="#" class="product-more-information">В корзину</a>
                             </span>
                         </div>
 
@@ -387,30 +389,30 @@
                                     Нет в наличии
                                 </span>
                                 <!-- -->
-                                <span class="fast-view-label">
+                                <span data-card_image="img/download-1.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand">Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <a href="#" class="product-more-information">Подробнее</a>
                             </span>
                         </div>
 
                         <div href="#" class="main-page-products-carousel__item">
                             <a href="#" class="main-page-products-carousel-image-container">
                                 <img src="img/swatch-yvb401-garosugil-ayvb401-7980291-247x296.jpg">
-                                <span class="fast-view-label">
+                                <span data-card_image="img/swatch-yvb401-garosugil-ayvb401-7980291-247x296.jpg" data-card_product-name="Ремень для часов Hamilton H600.326.100 Jazzmaster" class="fast-view-label">
                                     Быстрый просмотр
                                 </span>
                             </a>
                             <span class="main-page-products-carousel__product-name">
-                                <span class="product-brand"></span>
-                                <h3 class="product-name"></h3>
-                                <span class="product-price"></span>
-                                <a href="#" class="product-more-information"></a>
+                                <span class="product-brand">Hamilton</span>
+                                <h3 class="product-name">Ремень для часов Hamilton H600.326.100 Jazzmaster</h3>
+                                <span class="product-price">₽ 14,190.00</span>
+                                <a href="#" class="product-more-information">В корзину</a>
                             </span>
                         </div>
                     </div>
