--- a/watch group/index.html
+++ b/watch group/index.html
@@ -39,14 +39,14 @@
             </div>
             <div class="col-lg-7 col-xl-6">
                 <ul class="main-header-nav d-flex justify-content-between">
-                    <li class="main-header-nav__item right-border">
+                    <li class="main-header-nav__item right-border header-mail">
                         <a href="mailto:support@watch-group.com" title="support@watch-group.com" class="main-header-nav__item__mail">
                             <i class="far fa-envelope"></i>
                             <span style="font-weight: 500;"> Contact </span>
                         </a>
                     </li>
 
-                    <li class="main-header-nav__item right-border">
+                    <li class="main-header-nav__item right-border header-number">
                         <a href="tel:+7(499)113-32-87" title="+7(499)113-32-87"> <i class="fas fa-phone-alt"></i> <span style="font-weight: 500;">+7(499)113-32-87</span> </a>
                     </li>
 
